--- a/app.html
+++ b/app.html
@@ -35,7 +35,7 @@
       <div class="jumbotron" style="background-color: #F7F7F7;">
 
         <!-- Color of price when select current time and the price has gone up -->
-        <h1 class="daily-steps-tally" style="color: #53B981; margin-bottom: 0px;">$43.05</h1>
+        <h1 class="daily-steps-tally" style="color: #53B981; margin-bottom: 0px;"><span class="glyphicon glyphicon-triangle-top" style="font-size: 70%;" aria-hidden="true"></span>$43.05</h1>
         <p class="lead" style="color: #333A45;">
           price at
           <select>
@@ -45,7 +45,7 @@
         </p>
 
         <!-- Color of price when select current time and the price has gone down -->
-        <h1 class="daily-steps-tally" style="color: #D80000; margin-bottom: 0px;">$43.05</h1>
+        <h1 class="daily-steps-tally" style="color: #D80000; margin-bottom: 0px;"><span class="glyphicon glyphicon-triangle-bottom" style="font-size: 70%;" aria-hidden="true"></span>$43.05</h1>
         <p class="lead" style="color: #333A45;">
           price at
           <select>
@@ -55,7 +55,7 @@
         </p>
 
         <!-- Color of price when select time of prediction -->
-        <h1 class="daily-steps-tally" style="color: #FF9900; margin-bottom: 0px;">$43.05</h1>
+        <h1 class="daily-steps-tally" style="color: #286090; margin-bottom: 0px;">$43.05</h1>
         <p class="lead" style="color: #333A45;">
           price at
           <select>
@@ -70,7 +70,7 @@
       <script src="http://code.highcharts.com/modules/exporting.js"></script>
 
       <div style="background-color: white; border-radius: 12px; border: 1px solid white; border-width: thick;">
-        <h3 style="text-align: center;">Steps Per Minute vs. Temperature</h3>
+        <h3 style="text-align: center;">Stock Price Over Time</h3>
         <div id="chart-one" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
       </div>
 
@@ -79,9 +79,10 @@
       $(function () {
         $('#chart-one').highcharts({
             chart: {
-                zoomType: 'xy'
+              type: 'area',
+              zoomType: 'xy'
             },
-            colors: ['#286090'],
+            colors: ['#FF9900'],
             title: {
                 text: ''
             },
@@ -92,8 +93,11 @@
               enabled: false 
             },
             xAxis: [{
-                categories: ['0:00', '1:00', '2:00', '3:00', '4:00', '5:00', '6:00', '7:00', '8:00', '9:00', '10:00', '11:00', '0:00', '1:00', '2:00', '3:00', '4:00', '5:00', '6:00', '7:00', '8:00', '9:00', '10:00', '11:00', '0:00', '1:00', '2:00', '3:00', '4:00', '5:00', '6:00', '7:00', '8:00', '9:00', '10:00', '11:00'],
-                crosshair: true
+                categories: ['9/28 0:00', '9/28 1:00', '9/28 2:00', '9/28 3:00', '9/28 4:00', '9/28 5:00', '9/28 6:00', '9/28 7:00', '9/28 8:00', '9/28 9:00', '9/28 10:00', '9/28 11:00', '9/28 12:00', '9/28 13:00', '9/28 14:00', '9/28 15:00', '9/28 16:00', '9/28 17:00', '9/28 18:00', '9/28 19:00', '9/28 20:00', '9/28 21:00', '9/28 22:00', '9/28 23:00'],
+                crosshair: true,
+                labels: {
+                  step: 24
+                }
             }],
             yAxis: [{ // Primary yAxis
               min: 0,
@@ -115,17 +119,17 @@
                 shared: true
             },
             series: [{
-                name: 'Steps Per Hour',
-                type: 'spline',
+                name: 'Price',
                 yAxis: 0,
-                data: [144, 0, 0, 0, 0, 0, 0, 0, 0, 266, 112, 43, 144, 0, 0, 0, 0, 0, 0, 0, 0, 266, 112, 43, 144, 0, 0, 0, 0, 0, 0, 0, 0, 266, 112, 43],
+                data: [189.22, 189.22, 189.22, 189.22, 189.22,189.22, 189.22, 189.22, 189.22, 189.22, 189.28, 189.42, 189.62, 189.12, 188.92, 189.99, 189.67, 188.77, 188.77, 188.77, 188.77, 188.77, 188.77, 188.77],
                 tooltip: {
-                    valueSuffix: ' steps'
+                    valuePrefix: '$'
                 }
 
             }]
         });
       });
+
       </script>
 
       <div>
