--- a/create.html
+++ b/create.html
@@ -57,6 +57,8 @@
             <input type="number" style="width: 50px;" min="1" max="31">
             <input type="number" style="width: 70px;" min="2015" max="2016">
         </p>
+
+        <button id="check-your-predictions-button" href="#predictions-search-section" class="btn btn-lg btn-custom main-button">Create Prediction</button>
       </div>
       <footer style="display: none;" class="row">
         <hr>
