--- a/create.html
+++ b/create.html
@@ -170,7 +170,9 @@
         // create the endpoint GET url with params
         var stockPricesEndpoint = "http://104.131.219.239:3060/stockpricehistory/";
         stockPricesEndpoint += "?";
-        stockPricesEndpoint += "start=";
+        stockPricesEndpoint += "symbol=";
+        stockPricesEndpoint += encodeURIComponent(String(symbol).trim());
+        stockPricesEndpoint += "&start=";
         stockPricesEndpoint += encodeURIComponent(String(startDateTime).trim());
         stockPricesEndpoint += "&end=";
         stockPricesEndpoint += encodeURIComponent(String(endDateTime).trim());
